Quorum3/Library/Tests/TypeChecker/Pass/TextParseNumber.quorum
class Main
    action Main
        text p = "12.5"
        Text t 
        t:SetValue(p)
   
        output p:ParseNumber() + 1
        output t:ParseNumber() + 1
    end
end