Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignTextObjNumberWrapped.quorum
class main
    action Main
        Text t = 7.5
    end
end